tests/query_runtime_errors/bad_vec_state_window_return/error.txt
Error: 
    5 |   [true]
      |   ^^^^^^ An array as return value needs to be a two-element array of booleans with the form `[emit, include]`
